# opt-workshop

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample.env
data/: mlops_bleed_out_actuals.csv  mlops_bleed_out_test.csv  opt_steel_strength.csv
notebooks/: 00_prep_mlops_model.ipynb  00_prep_opt_models.ipynb  01_mlops_deploy_predict.ipynb  01_mlops_deploy_predict_サンプル.ipynb  01_mlops_deploy_predict_記入用.ipynb  02_optimization_randomsearch_サンプル.ipynb  02_optimization_randomsearch_記入用.ipynb  03_optimization_single_objective_サンプル.ipynb  03_optimization_single_objective_記入用.ipynb  04_optimization_multi_objective_サンプル.ipynb  04_optimization_multi_objective_記入用.ipynb  05_optimization_randomsearch_課題1.ipynb  06_optimization_single_objective_課題2.ipynb
