[project]
name = "opt-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmaes>=0.11.1",
    "dask>=2025.2.0",
    "datarobot>=3.6.3",
    "datarobot-predict>=1.9.7",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.0",
    "numexpr>=2.10.2",
    "optuna>=4.2.1",
    "optunahub>=0.2.0",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "plotly>=6.0.0",
    "pulumi>=3.152.0",
    "pulumi-datarobot>=0.8.11",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "streamlit>=1.42.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
